only add settings in buildplugin